istio/canary.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: colors
spec:
  hosts:
  - "colors-guy.cf-cd.com"
  gateways:
  - colors
  http:
